fixed spacing on horizontal mobile pg1

--- a/style.css
+++ b/style.css
@@ -1382,7 +1382,7 @@
         background-image: url('img/front_page_image_2.jpg');
         background-blend-mode: color;
         background-size: cover;
-        min-height: 90vh;
+        min-height: 160vh;
         height: 100%;
         position: relative;
     }
